# bchydro-export

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml
custom_components/bchydro/: README.md  __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/bchydro/translations/: en.json
lib/: README.md  pyproject.toml
lib/src/bchydro_export/: __init__.py  client.py  exceptions.py  parser.py
lib/tests/: test_client.py  test_parser.py
lib/tests/fixtures/: consumption.csv  download_centre.html  login_failure.html  login_success.html
pyscript/: README.md  bchydro_export.py
pyscript/examples/: configuration.yaml
