[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bchydro-export"
version = "1.0.0"
description = "Fetch hourly electricity consumption data from BC Hydro's Data Export portal"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Sam Manders"}]
dependencies = ["requests>=2.31.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
]

[project.urls]
Homepage = "https://github.com/sjtech-ca/bchydro-export"
Issues = "https://github.com/sjtech-ca/bchydro-export/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
